[package]
name = "ricat"
version = "0.3.2"
edition = "2021"
authors = ["Aditya Navphule <adityanav@duck.com>"]
description = "A Rust-Based implemenation of classic UNIX `cat` command"
repository = "https://github.com/adityanav123/ricat"
license = "MIT"
keywords = ["cat", "cli", "text-processing", "file", "system-tools"]

[[bin]]
name = "ricat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.2", features = ["derive"]}
regex = "1.10.3"
crossterm = "0.27.0"
base64 = "0.22.0"