[package]
name = "ricat"
version = "0.4.1"
edition = "2021"
authors = ["Aditya Navphule <adityanav@duck.com>"]
description = "A Rust-Based implemenation of classic UNIX `cat` command"
repository = "https://github.com/adityanav123/ricat"
license = "MIT"
keywords = ["cat", "cli", "text-processing", "file", "system-tools"]
documentation = "https://adityanav123.github.io/ricat"

[[bin]]
name = "ricat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.2", features = ["derive"]}
regex = "1.10.3"
crossterm = "0.27.0"
base64 = "0.22.0"
thiserror = "1.0.59"
criterion = "0.5.1"
memmap2 = "0.9.4"

# [lib]
# name = "ricat"
# path = "src/main.rs"
# crate-type = ["rlib"]
